Fix overflow-x:hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@ h6 {
 
 body {
   color: var(--white);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 a {
